tests/ui/form_data_unparsable.stderr
error[E0277]: the trait bound `MyType: FromStr` is not satisfied
 --> $DIR/form_data_unparsable.rs:5:10
  |
5 | #[derive(FormData)]
  |          ^^^^^^^^ the trait `FromStr` is not implemented for `MyType`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
